Fix the issue where text could be dimmed -> a (link) background color now transparent (function "Increase page contrast") - fix Google News

--- a/src/css/content.less
+++ b/src/css/content.less
@@ -101,9 +101,9 @@
     }
     .pageShadowContrastBlack@{name} a {
         color: @lnkcolor !important;
-        background-color: @bgcolor !important;
+        background: transparent !important;
     }
-    .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *:not(img):not(svg):not(select):not(ins):not(del):not(mark):not(.pageShadowHasBackgroundImg):not(.pageShadowDisableStyling) {
+    .pageShadowContrastBlack@{name}.pageShadowBackgroundDetected *:not(img):not(a):not(svg):not(select):not(ins):not(del):not(mark):not(.pageShadowHasBackgroundImg):not(.pageShadowDisableStyling) {
         background: @bgcolor !important;
     }
     .pageShadowContrastBlack@{name} a:visited:not(#pageShadowLinkNotVisited), .pageShadowContrastBlack@{name} #pageShadowLinkVisited {
